# AA

./: .bzrignore
A/: CMakeLists.txt  killer.in  main.cpp  pytania.txt
A/testy/: 1.tout
B1/: CMakeLists.txt  main.cpp
B1/testy/: t00.in
B2/: main.cpp
C/: gen.cpp  main.cpp  test
D/: main.cpp
E/: CMakeLists.txt  main.cpp
E/testy/: 1.in  55.in  t00.out
F/: main.cpp  pytania  solution
F/testy/: 5.out
G1/: gen  killer.in  main.cpp  pytania  test.cpp
G1/testy/: 1.out
G2/: main.cpp  solution
G2/testy/: 22.in  upper-2.out
